@@ -31,6 +31,7 @@
 - msvs2005prj: fixed handling of include and library paths with spaces
 - msvc6prj: fixed to not use minimal rebuild with optimization (#42)
 - autoconf: call AC_BAKEFILE_PROG_CC/CXX from AC_BAKEFILE (#64)
+- autoconf: added pkgconfig module (Francesco Montorsi, #105)
 
 
 Version 0.2.2
